refactor: get rid of secUser