@@ -23,7 +23,6 @@ import be.cytomine.domain.image.server.Storage;
 import be.cytomine.domain.ontology.Ontology;
 import be.cytomine.domain.project.Project;
 import be.cytomine.domain.project.ProjectRepresentativeUser;
-import be.cytomine.domain.security.SecUser;
 import be.cytomine.domain.security.User;
 import be.cytomine.exceptions.ForbiddenException;
 import be.cytomine.exceptions.ObjectNotFoundException;
@@ -35,7 +34,7 @@ import be.cytomine.service.project.ProjectRepresentativeUserService;
 import be.cytomine.service.project.ProjectService;
 import be.cytomine.service.report.ReportService;
 import be.cytomine.service.search.UserSearchExtension;
-import be.cytomine.service.security.SecUserService;
+import be.cytomine.service.security.UserService;
 import be.cytomine.service.security.SecurityACLService;
 import be.cytomine.utils.JsonObject;
 import lombok.RequiredArgsConstructor;
@@ -57,7 +56,7 @@ import static org.springframework.security.acls.domain.BasePermission.ADMINISTRA
 @RequiredArgsConstructor
 public class RestUserController extends RestCytomineController {
 
-    private final SecUserService secUserService;
+    private final UserService userService;
 
     private final ProjectService projectService;
 
@@ -83,7 +82,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list admins from project {}", id);
         Project project = projectService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", id));
-        return responseSuccess(secUserService.listAdmins(project), isFilterRequired());
+        return responseSuccess(userService.listAdmins(project), isFilterRequired());
     }
 
     @GetMapping("/project/{id}/users/representative.json")
@@ -104,7 +103,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list creator from project {}", id);
         Project project = projectService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", id));
-        return responseSuccess(List.of(secUserService.findCreator(project).orElseThrow(() -> new ObjectNotFoundException("Project", "CREATOR"))));
+        return responseSuccess(List.of(userService.findCreator(project).orElseThrow(() -> new ObjectNotFoundException("Project", "CREATOR"))));
     }
 
 
@@ -115,7 +114,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list user from ontology {}", id);
         Ontology ontology = ontologyService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Ontology", id));
-        return responseSuccess(secUserService.listUsers(ontology), isFilterRequired());
+        return responseSuccess(userService.listUsers(ontology), isFilterRequired());
     }
 
     @GetMapping("/project/{id}/userlayer.json")
@@ -128,7 +127,7 @@ public class RestUserController extends RestCytomineController {
                 .orElseThrow(() -> new ObjectNotFoundException("Project", id));
         ImageInstance image  = imageInstanceService.find(idImage).orElse(null);
 
-        return responseSuccess(secUserService.listLayers(project, image), isFilterRequired());
+        return responseSuccess(userService.listLayers(project, image), isFilterRequired());
 
     }
 
@@ -139,7 +138,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list user from storage {}", id);
         Storage storage = storageService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Storage", id));
-        return responseSuccess(secUserService.listUsers(storage), isFilterRequired());
+        return responseSuccess(userService.listUsers(storage), isFilterRequired());
     }
 
     // TODO IAM: only return display name + new endpoint for account
@@ -154,7 +153,7 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to list user");
         return responseSuccess(
-                secUserService.list(retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
+                userService.list(retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
                 , isFilterRequired()
         );
     }
@@ -165,18 +164,18 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to get User : {}", id);
 
-        Optional<SecUser> user = secUserService.find(id);
+        Optional<User> user = userService.find(id);
         if (user.isEmpty()) {
-            user = secUserService.findByUsername(id);
+            user = userService.findByUsername(id);
         }
 
-        return user.map(secUser -> responseSuccess(secUser, isFilterRequired())).orElseGet(() -> responseNotFound("User", id));
+        return user.map(u -> responseSuccess(u, isFilterRequired())).orElseGet(() -> responseNotFound("User", id));
     }
 
 //    //TODO IAM: still needed ?
 //    @GetMapping("/userkey/{publicKey}/keys.json")
 //    public ResponseEntity<String> keys(@PathVariable String publicKey) {
-//        SecUser user = secUserService.findByPublicKey(publicKey)
+//        User user = userService.findByPublicKey(publicKey)
 //                .orElseThrow(() -> new ObjectNotFoundException("User", Map.of("publicKey", publicKey).toString()));
 //        securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
 //        return responseSuccess(JsonObject.of("privateKey", user.getPrivateKey(), "publicKey", user.getPublicKey()));
@@ -185,7 +184,7 @@ public class RestUserController extends RestCytomineController {
 //    //TODO IAM: still needed ?
 //    @GetMapping("/user/{id}/keys.json")
 //    public ResponseEntity<String> keysById(@PathVariable String id) {
-//        SecUser user = secUserService.find(id)
+//        User user = userService.find(id)
 //                .orElseThrow(() -> new ObjectNotFoundException("User", Map.of("id or username", id).toString()));
 //        securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
 //        return responseSuccess(JsonObject.of("privateKey", user.getPrivateKey(), "publicKey", user.getPublicKey()));
@@ -196,28 +195,28 @@ public class RestUserController extends RestCytomineController {
     public ResponseEntity<String> getCurrentUser(
     ) {
         log.debug("REST request to get current User");
-        return responseSuccess(secUserService.getCurrentUser());
+        return responseSuccess(userService.getCurrentUser());
     }
 
     //TODO IAM: delegate to IAM
     @PostMapping("/user.json")
     public ResponseEntity<String> createUser(@RequestBody String json) {
         log.debug("REST request to save User : " + json);
-        return add(secUserService, json);
+        return add(userService, json);
     }
 
     //TODO IAM: delegate to IAM
     @PutMapping("/user/{id}.json")
     public ResponseEntity<String> updateUser(@PathVariable String id, @RequestBody JsonObject json) {
         log.debug("REST request to update User : {}", id);
-        return update(secUserService, json);
+        return update(userService, json);
     }
 
     //TODO IAM: delegate to IAM
     @DeleteMapping("/user/{id}.json")
     public ResponseEntity<String> deleteUser(@PathVariable String id) {
         log.debug("REST request to delete User: {}", id);
-        return delete(secUserService, JsonObject.of("id", Long.parseLong(id)), null);
+        return delete(userService, JsonObject.of("id", Long.parseLong(id)), null);
     }
 
 
@@ -243,7 +242,7 @@ public class RestUserController extends RestCytomineController {
         userSearchExtension.setWithNumberConnections(withNumberConsultations);
 
         return responseSuccess(
-                secUserService.listUsersExtendedByProject(project, userSearchExtension, retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
+                userService.listUsersExtendedByProject(project, userSearchExtension, retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
                 , isFilterRequired()
         );
 
@@ -254,21 +253,21 @@ public class RestUserController extends RestCytomineController {
     @PostMapping("/project/{project}/user/{user}.json")
     public ResponseEntity<String> addUserToProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to add User {} to project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        secUserService.addUserToProject(user, project, false);
+        userService.addUserToProject(user, project, false);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @PostMapping("/project/{project}/user.json")
-    public ResponseEntity<String> addUsersToProject(@PathVariable("project") Long projectId, @RequestParam("users") String users) {
-        log.debug("REST request to add Users {} to project {}", users, projectId);
+    public ResponseEntity<String> addUsersToProject(@PathVariable("project") Long projectId, @RequestParam("users") String userIds) {
+        log.debug("REST request to add Users {} to project {}", userIds, projectId);
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        List<String> usersIds = Arrays.stream(users.split(",")).collect(Collectors.toList());
+        List<String> usersIds = Arrays.stream(userIds.split(",")).toList();
 
         String errorMessage = "";
         List<String> errors = new ArrayList<>();
@@ -282,14 +281,14 @@ public class RestUserController extends RestCytomineController {
             }
         }
 
-        List<SecUser> secUsers = secUserService.list(usersValidIds);
+        List<User> users = userService.list(usersValidIds);
 
         wrongIds.addAll(usersIds);
-        wrongIds.removeAll(secUsers.stream().map(x -> String.valueOf(x.getId())).collect(Collectors.toList()));
+        wrongIds.removeAll(users.stream().map(x -> String.valueOf(x.getId())).toList());
 
-        for (SecUser user : secUsers) {
+        for (User user : users) {
             try {
-                secUserService.addUserToProject(user, project, false);
+                userService.addUserToProject(user, project, false);
             } catch(Exception e) {
                 errors.add(user.getId().toString());
             }
@@ -318,21 +317,21 @@ public class RestUserController extends RestCytomineController {
     @DeleteMapping("/project/{project}/user/{user}.json")
     public ResponseEntity<String> deleteUserFromProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to remove User {} from project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        secUserService.deleteUserFromProject(user, project, false);
+        userService.deleteUserFromProject(user, project, false);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @DeleteMapping("/project/{project}/user.json")
-    public ResponseEntity<String> deleteUsersFromProject(@PathVariable("project") Long projectId, @RequestParam("users") String users) {
-        log.debug("REST request to add Users {} to project {}", users, projectId);
+    public ResponseEntity<String> deleteUsersFromProject(@PathVariable("project") Long projectId, @RequestParam("users") String userIds) {
+        log.debug("REST request to add Users {} to project {}", userIds, projectId);
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        List<String> usersIds = Arrays.stream(users.split(",")).collect(Collectors.toList());
+        List<String> usersIds = Arrays.stream(userIds.split(",")).toList();
 
         String errorMessage = "";
         List<String> errors = new ArrayList<>();
@@ -346,14 +345,14 @@ public class RestUserController extends RestCytomineController {
             }
         }
 
-        List<SecUser> secUsers = secUserService.list(usersValidIds);
+        List<User> users = userService.list(usersValidIds);
 
         wrongIds.addAll(usersIds);
-        wrongIds.removeAll(secUsers.stream().map(x -> String.valueOf(x.getId())).collect(Collectors.toList()));
+        wrongIds.removeAll(users.stream().map(x -> String.valueOf(x.getId())).toList());
 
-        for (SecUser user : secUsers) {
+        for (User user : users) {
             try {
-                secUserService.deleteUserFromProject(user, project, false);
+                userService.deleteUserFromProject(user, project, false);
             } catch(Exception e) {
                 errors.add(user.getId().toString());
             }
@@ -382,47 +381,47 @@ public class RestUserController extends RestCytomineController {
     @PostMapping("/project/{project}/user/{user}/admin.json")
     public ResponseEntity<String> addUserAdminToProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to add User {} to project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        secUserService.addUserToProject(user, project, true);
+        userService.addUserToProject(user, project, true);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @DeleteMapping("/project/{project}/user/{user}/admin.json")
     public ResponseEntity<String> deleteUserAdminFromProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to remove User {} from project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
         if (!Objects.equals(currentUserService.getCurrentUser().getId(), user.getId())) {
             securityACLService.check(project,ADMINISTRATION);
         }
-        secUserService.deleteUserFromProject(user, project, true);
+        userService.deleteUserFromProject(user, project, true);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @PostMapping("/storage/{storage}/user/{user}.json")
     public ResponseEntity<String> addUserToStorage(@PathVariable("storage") Long storageId, @PathVariable("user") Long userId) {
         log.debug("REST request to add User {} to storage {}", userId, storageId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Storage storage = storageService.find(storageId)
                 .orElseThrow(() -> new ObjectNotFoundException("Storage", storageId));
-        secUserService.addUserToStorage(user, storage);
+        userService.addUserToStorage(user, storage);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @DeleteMapping("/storage/{storage}/user/{user}.json")
     public ResponseEntity<String> deleteUserFromStorage(@PathVariable("storage") Long storageId, @PathVariable("user") Long userId) {
         log.debug("REST request to remove User {} from storage {}", userId, storageId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Storage storage = storageService.find(storageId)
                 .orElseThrow(() -> new ObjectNotFoundException("Storage", storageId));
-        secUserService.deleteUserFromStorage(user, storage);
+        userService.deleteUserFromStorage(user, storage);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
@@ -435,30 +434,30 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to list user layers from project {}", id);
 
-        User user = secUserService.findUser(id)
+        User user = userService.findUser(id)
                 .orElseThrow(() -> new ObjectNotFoundException("User", id));
 
-        List<SecUser> friends = new ArrayList<>();
+        List<User> friends = new ArrayList<>();
 
         if (offlineToo) {
             if (projectId!=null) {
                 //get all user project list
                 Project project = projectService.find(projectId)
                         .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-                friends = secUserService.listUsers(project);
+                friends = userService.listUsers(project);
             } else {
                 //get all people that share common project with user
-                friends = secUserService.getAllFriendsUsers(user);
+                friends = userService.getAllFriendsUsers(user);
             }
         } else {
             if (projectId!=null) {
                 //get user project online
                 Project project = projectService.find(projectId)
                         .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-                friends = secUserService.getAllFriendsUsersOnline(user, project);
+                friends = userService.getAllFriendsUsersOnline(user, project);
             } else {
                 //get friends online
-                friends = secUserService.getAllFriendsUsersOnline(user);
+                friends = userService.getAllFriendsUsersOnline(user);
             }
         }
         return responseSuccess(friends, isFilterRequired());
@@ -472,7 +471,7 @@ public class RestUserController extends RestCytomineController {
 
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        return responseSuccess(secUserService.getAllOnlineUserWithTheirPositions(project), isFilterRequired());
+        return responseSuccess(userService.getAllOnlineUserWithTheirPositions(project), isFilterRequired());
     }
 
     @GetMapping("/project/{project}/usersActivity.json")
@@ -483,7 +482,7 @@ public class RestUserController extends RestCytomineController {
 
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        return responseSuccess(secUserService.getUsersWithLastActivities(project), isFilterRequired());
+        return responseSuccess(userService.getUsersWithLastActivities(project), isFilterRequired());
     }
 
     @GetMapping("/project/{project}/user/download")
@@ -496,10 +495,10 @@ public class RestUserController extends RestCytomineController {
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        List<SecUser> projectUsers = secUserService.listUsers(project);
+        List<User> projectUsers = userService.listUsers(project);
         List<Map<String, Object>> users = new ArrayList<>();
 
-        for (SecUser user : projectUsers) {
+        for (User user : projectUsers) {
             if (user instanceof User) {
                 users.add(Map.of(
                         "username", ((User) user).getUsername(),
@@ -519,12 +518,12 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to list activities for user {} and for project {}", userId, projectId);
 
-        User user = secUserService.findUser(userId)
+        User user = userService.findUser(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        return responseSuccess(secUserService.getResumeActivities(project, user), isFilterRequired());
+        return responseSuccess(userService.getResumeActivities(project, user), isFilterRequired());
     }
 
 
